--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-photo-album": "^2.3.0",
     "react-router-dom": "^6.19.0",
     "react-toggle-dark-mode": "^1.1.1",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "swiper": "^11.0.5",
+    "yet-another-react-lightbox": "^3.15.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
