--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "@heroicons/react": "^2.0.18",
     "axios": "^1.6.4",
     "formik": "^2.4.5",
+    "jalali-moment": "^3.3.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-gallery": "^1.0.1-alpha.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
+    "react-spinners": "^0.13.8",
     "react-toggle-dark-mode": "^1.1.1",
     "sass": "^1.69.5",
-    "sweetalert2": "^11.10.1",
+    "sweetalert2": "^11.10.2",
     "swiper": "^11.0.5",
     "yet-another-react-lightbox": "^3.15.6",
     "yup": "^1.3.3"
