--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@heroicons/react": "^2.0.18",
     "axios": "^1.6.4",
+    "dompurify": "^3.0.4",
     "formik": "^2.4.5",
     "jalali-moment": "^3.3.11",
     "react": "^18.2.0",
@@ -30,6 +31,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
